# GrabCut

./: .gitignore  CMakeLists.txt  README.md
maxflow/: CMakeLists.txt
src/: grabcut.h  main.cpp
